--- a/index.html
+++ b/index.html
@@ -112,10 +112,8 @@ START EVERY DAY WITH A HEALTHY HERBALIFE FORMULA 1 BREAKFAST</li>
 				<div class="text-center sub_head">WHEN PARTICIPATING IN THE CHALLENGE, FOR P600 ( PLUS P150 FOR SHIPPING COSTS ) YOU'LL RECEIVE:</div>
 					<div class="col-md-4 col-sm-4 col-xs-12 for_1">
 						<h1 class="text-center for_1_head">NUTRITION</h1>
-						<span>3</span>
-						<h2>HERBALIFE FORMULA 1 DUTCH CHOCOLATE MEAL REPLACEMENT SHAKES</h2>
-						<span>3</span>
-						<h2>HERBALIFE FORMULA 1 FRENCH VANILLA MEAL REPLACEMENT SHAKES</h2>
+						<span>6</span>
+						<h2>HERBALIFE FORMULA 1 MEAL REPLACEMENT SHAKES (DUTCH CHOCOLATE OR FRENCH VANILLA)</h2>
 					</div>
 					
 					<div class="col-md-4 col-sm-4 col-xs-12 for_2">
